# saffron-engine-2d

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  Box.cpp  CMakeLists.txt  CMakeSettings.json  MainWin.cpp  Makefile  README.md  imgui.ini  premake5.lua  utils.lua
.github/workflows/: ci.yml  release.yml
Project/: imgui.ini
Project/Src/: ProjectApplication.cpp  ProjectApplication.h
Project/Src/Layers/: BaseLayer.cpp  BaseLayer.h  ProjectLayer.cpp  ProjectLayer.h
Saffron/Src/: Saffron.h  SaffronPCH.cpp  SaffronPCH.h
Saffron/Src/Saffron/: Base.h  Config.h  EntryPoint.h
Scripts/: GenerateProject.bat  PullAndUpdate.bat  RemoteUpdateAndGenerate.bat
Source/: Saffron.h  SaffronPCH.h
Source/Saffron/: Base.h  EntryPoint.h
Source/Saffron/Core/: App.cpp  App.h  Batch.cpp  Batch.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Core.h  DateTime.cpp  DateTime.h  Filesystem.cpp  Filesystem.h  Global.cpp  Global.h  NonCopyable.h  Run.cpp  Run.h  SingleTon.cpp  SingleTon.h  SubscriberList.cpp  SubscriberList.h  ThreadPool.cpp  ThreadPool.h  TypeDefs.h  UUID.h  Voronoi.cpp  Voronoi.h  Window.cpp  Window.h  WrapperBuffer.cpp
Source/Saffron/Debug/: Debug.cpp  Debug.h
Source/Saffron/Graphics/: ComputeShader.cpp  ComputeShader.h  RenderTargetManager.cpp  RenderTargetManager.h  Scene.cpp  Scene.h
Source/Saffron/Gui/: DockSpace.cpp  FadePane.cpp  FadePane.h  Gui.cpp  Gui.h  GuiImpl.cpp  MenuBar.cpp  MenuBar.h  SplashScreenPane.cpp  SplashScreenPane.h  Terminal.cpp  Terminal.h  ViewportPane.cpp  ViewportPane.h
Source/Saffron/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Source/Saffron/Interface/: IException.cpp
Source/Saffron/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Source/Saffron/Libraries/: GenUtils.cpp  GenUtils.h  VecUtils.h
Source/Saffron/Lighting/: LightningMgr.cpp
Source/Saffron/Log/: Log.cpp  Log.h  LogManager.cpp  LogManager.h  LogMessage.h  LogSink.h  Logger.cpp  Logger.h  TerminalSink.cpp  TerminalSink.h
Source/Saffron/Math/: Random.h  SaffronMath.h  Transform.h
Source/Saffron/Physics/: CircleCollider.h
Source/Saffron/Resource/: ComputeShaderStore.h  FontStore.h  ImageStore.h  MusicStore.h  ResourceStore.h  ShaderStore.h  SoundBufferStore.h  SoundStore.h  TextureStore.h
assets/: imgui.ini
include/: AppDraw.cpp  AppExit.cpp  AppIncludes.hpp  AppInit.cpp  AppResources.hpp  AppUpdate.cpp  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Chat.cpp  Chat.hpp  Funclib.cpp  Funclib.hpp  Graphics.cpp  Graphics.hpp  InputUtility.cpp  InputUtility.hpp  KeyToggle.cpp  KeyToggle.hpp  Math.hpp  Matrix.cpp  Matrix.hpp  Random.hpp  UI.cpp  UI.hpp  Voronoi.cpp  Voronoi.hpp
include/Arth/: Random.hpp
include/Core/: AllSFML.hpp  AppIncludes.hpp  Application.cpp  Application.hpp  AudioMgr.cpp  AudioMgr.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  Client.cpp  Client.hpp  EventMgr.cpp  EventMgr.hpp  GUI.cpp  GUI.hpp  Graphics.cpp  Graphics.hpp  Input.hpp  InputUtility.cpp  Log.cpp  Log.hpp  PacketT.hpp  Server.cpp  Server.hpp  UI.cpp  UI.hpp
include/Net/: Client.hpp  PacketMgr.cpp  PacketMgr.hpp  Server.cpp  Server.hpp
lib/Glad/lib/: Glad.lib
lib/Glad/src/: glad.c
res/Shaders/: fragmentShader.frag  julia.comp  julia.frag  mandelbrot.comp  mandelbrot.frag  painter.comp  painter.frag
res/shaders/: fragmentShader.frag  renderLights.frag  shadowMap.frag  vertexShader.vert
source/: saffron_pch.cpp  saffron_pch.h
source/saffron/: base.h  entry_point.h
source/saffron/core/: app.cpp  app.h  batch.cpp  batch.h  camera.cpp  camera.h  clock.h  core.cpp  core.h  date_time.cpp  filesystem.cpp  filesystem.h  non_copyable.h  run.h  singleton.cpp  singleton.h  subscriber_list.h  type_defs.h  uuid.h  voronoi.cpp  voronoi.h  window.h  wrapper_buffer.cpp  wrapper_buffer.h
source/saffron/debug/: debug.cpp  debug.h
source/saffron/etc/: animated_sprite.cpp  animation.cpp  hsv_color.cpp  hsv_color.h
source/saffron/graphics/: compute_shader.cpp  controllable_render_texture.cpp  controllable_render_texture.h  render_target_manager.h  scene.cpp  scene.h
source/saffron/gui/: dock_space.cpp  dock_space.h  gui.cpp  gui.h  gui_impl.h  menu_bar.cpp  menu_bar.h  splash_screen_pane.cpp  splash_screen_pane.h  terminal.cpp  viewport_pane.cpp  viewport_pane.h
source/saffron/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
source/saffron/layer/: layer.h  layer_stack.h
src/: MainWin.cpp  ProjectApplication.cpp  ProjectApplication.h  SFGUI_Example.cpp  saffron.h
src/Layers/: BaseLayer.cpp  BaseLayer.h  ProjectLayer.cpp  ProjectLayer.h
src/Lightning/: Light.cpp  Light.h  LightningMgr.cpp  LightningMgr.h  SpotLight.cpp  SpotLight.h
src/Saffron/: Base.h  EntryPoint.h
src/apps/: App.cpp  App.h  AppClient.cpp  AppClient.h  AppServer.cpp  AppServer.h
src/core/: Camera.cpp  Camera.h  Clock.h  Draw.cpp  Draw.h  EventMgr.cpp  EventMgr.h  FPSLimiter.cpp  FPSLimiter.h  FontMgr.cpp  FontMgr.h  GuiMgr.cpp  GuiMgr.h  Keyboard.cpp  Keyboard.h  Lib.cpp  Lib.h  Log.cpp  Log.h  Mouse.cpp  Mouse.h  MusicMgr.h  Random.h  ScreenList.cpp  SoundBufferMgr.h  TextureMgr.cpp  TextureMgr.h  VeException.cpp  VeException.h  Vec2.h  VectorLib.cpp  VectorLib.h  Window.cpp  Window.h
src/input/: Keyboard.cpp  Mouse.cpp  Mouse.h
src/interfaces/: IApp.cpp  IApp.h  IConnHandler.cpp  IConnHandler.h  IConnInfo.cpp  IConnInfo.h  IConnection.h  IException.h  INetMgr.cpp  INetMgr.h  IPacketHandler.h  IResourceMgr.h  IScreen.h
src/net/: Client.cpp  Client.h  ClientInfo.h  Connection.cpp  Connection.h  Packager.cpp  Packager.h  PacketMgr.cpp  PacketType.h  ParsedPacket.h  Protocol.h  Server.cpp  Server.h  ServerInfo.h
src/netmodules/: PingModule.cpp  SetupModule.cpp
src/primitives/: Rect.h
src/project/: BoxEntity.h  CircleEntity.h  LightEntity.h
src/res/: FontMgr.h  MusicMgr.h  SoundBufferMgr.h  TextureMgr.h
src/screens/: ClientMainScreen.cpp  ClientMainScreen.h  GameplayScreen.cpp  GameplayScreen.h  ServerMainScreen.cpp  ServerMainScreen.h
src/throwmacros/: GeneralThrowMacros.h  GenericThrowMacros.h
(+252 files in other folders)
